# full-stack-fastapi-react-app

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: database.py  main.py  utils.py
backend/src/dtos/: item_dto.py  stat_dto.py
backend/src/endpoints/: item_route.py  media_route.py  stats_route.py
backend/src/schema/: item_model.py  user.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Config.ts  api-client.ts  api.ts  index.css  main.tsx
frontend/src/components/: app-sidebar.tsx  empty.tsx  error-message.tsx  loading.tsx
frontend/src/hooks/: itemQueries.ts
frontend/src/lib/: components-utils.tsx
frontend/src/pages/: Home.tsx  ItemCard.tsx  Items.tsx  item-form.tsx
frontend/src/services/: items.ts
